# libnanobind

./: CMakeLists.txt
.github/workflows/: pip.yml  wheels.yml
tests/: test_nanobind.cpp
ups/: eupspkg.cfg.sh  nanobind_shared.cfg
